<resources>
    <string name="app_name">Smart karbala</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="developed_by">Developed by Information technology in Northern Borders Region Municipality</string>
    <string name="create_new_account">Create new account</string>
    <string name="add_mobile_number">Add your mobile number and get verification code.</string>
    <string name="name_hint">Your Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="terms_conditions">I’ve read and accept the</string>
    <string name="terms_conditions_click"><u>Terms and conditions</u></string>
    <string name="terms_policy_title"><![CDATA[Terms & Policy]]></string>
    <string name="name_empty_error_message">Enter your name</string>
    <string name="phone_empty_error_message">Enter your phone number</string>
    <string name="phone_wrong_error_message">Wrong phone number</string>
    <string name="enter_verification_code">Enter a verification code</string>
    <string name="verification_message_description">A text message with a verification code was just sent to your mobile</string>
    <string name="time_to_get_code">You will get the verification code within</string>
    <string name="didnt_recieve">Didn\'t received!</string>
    <string name="send_again"><u>Send again</u></string>
    <string name="no_code">Enter your validation code</string>
    <string name="second">second</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_search_hint">Search for location</string>
    <string name="add_your_complaint">Add your complaint</string>
    <string name="townships_title">Township</string>
    <string name="select">Select</string>
    <string name="back">Back</string>
    <string name="complete_complaint">Complete your complaint</string>
    <string name="after_choose_location">After choose your location complete the complaint</string>
    <string name="complaint_title_hint">Complaint title</string>
    <string name="complaint_type">Complaint category</string>
    <string name="complaint_details_hint">Complaint details</string>
    <string name="send">Send</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="change_language">Change language</string>
    <string name="contact_us_message_subject_hint">Message subject</string>
    <string name="contact_us_message_description_hint">Message description - click here to edit text</string>
    <string name="contact_by">Contact by</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="twitter">Twitter</string>
    <string name="mail">E-Mail</string>
    <string name="hotline">Hotline</string>
    <string name="hotline_number">940</string>
    <string name="contact_us_message_subject_error">Enter message subject</string>
    <string name="contact_us_message_description_error">Enter message description</string>
    <string name="contact_us_message_sent_successfuly">Your message sent successfuly</string>
    <string name="change">Change</string>
    <string name="complaint_search_hint">Search for complaint</string>
    <string name="complaint_pictures">Complaint picturs</string>
    <string name="complaint_voice">Complaint voice</string>
    <string name="permission_denied">Permission denied</string>
    <string name="location_permission_denied_message">Location permissions denied</string>
    <string name="error">Error</string>
    <string name="choose_township_error_message">Choose township</string>
    <string name="save">Save</string>
    <string name="storage_permission_denied_message">Need storage permission to continue...</string>
    <string name="error_add_photo">Failed to get photo</string>
    <string name="error_number_of_photos">Can\'t add more than 5 photos</string>
    <string name="enable_gps">EnableG GPS to get location</string>
    <string name="complaint_category_title">Complaint Category</string>
    <string name="choose_complaint_category_error_message">Choose complaint type</string>
    <string name="permission_denied_message">To record a Voice, Allow Application access to you microphone and your device\'s photos, media, and files</string>
    <string name="record_permission_denied_message">Please, allow Application to access  your microphone</string>
    <string name="try_again">Check your internet connection, and try again</string>
    <string name="exit">Exit</string>
    <string name="reconnect">Reconnect</string>
    <string name="loading">Loading...</string>
    <string name="result_error_try_later">Something error happened, Try again later</string>
    <string name="invalid_verification_code">Invalid verification code</string>
    <string name="check_your_network_and_try_again_later">Check your network and try again later</string>
    <string name="no_townships">No Townships available</string>
    <string name="complaint_title_error_message">Enter complaint title</string>
    <string name="complaint_category_error_message">Enter complaint description</string>
    <string name="choose_complaint_image_error_message">Attach one image at least to your complaint</string>
    <string name="complaint_details_error_message">Enter complaint details</string>
    <string name="stop_recording_message">Stop recording before send complaint</string>
    <string name="successfully">Successfully</string>
    <string name="msg_send_complaint_successfully">Thanks for add a new complaint! \nNow you can check complaint status by hitting the below blue button.</string>
    <string name="act_home_screen"><u>Home screen</u></string>
    <string name="msg_need_back">Need back to</string>
    <string name="no_complaint">No Complaint</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="error_user_name_not_chnaged">User name not changed</string>
    <string name="msg_user_name_changed">User name changed successfully</string>
    <string name="no_complaint_details">No Details available for this complaint</string>
    <string name="msg_change_lang_to_english">Change Language to english</string>
    <string name="msg_change_lang_to_arabic">تغير اللغة الي اللغة العربية</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="sure_send_complaint">Are you sure you want to send the complaint?</string>
    <string name="error_choose_location_first">Choose location first</string>
    <string name="title_all_fields_mandatory">All fields are Mandatory, fill all of them</string>
    <string name="title_hint_full_name">Full name</string>
    <string name="title_hint_email">Email address</string>
    <string name="title_hint_mobile">Mobile number</string>
    <string name="splash_sentence">Citizens Application to interact with the holy governorate of karbala</string>
    <string name="title_welcome_to_karbala">Welcome to Smart karbala</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_not_have_account">If you don\'t have account yet, Please sign up</string>
    <string name="title_new_account">New account</string>
    <string name="title_citizen_or_visitor">If you are karbala citizen select citizen, if not select visitor</string>
    <string name="title_visitor">Visitor</string>
    <string name="title_citizen">Citizen</string>
    <string name="title_sign_up_as_citizen">Sign up as a citizen</string>
    <string name="title_date_format">Birthday - Month / Day / Year</string>
    <string name="title_city">Sub District</string>
    <string name="title_area">District</string>
    <string name="title_neighborhood">Hay</string>
    <string name="title_sign_up_as_visitor">Sign up as a visitor</string>
    <string name="msg_user_number">"User number # "</string>
    <string name="msg_successfull_rigster">Successful register</string>
    <string name="select_location_message">Select your location first then hit this blue button</string>
    <string name="title_new_complaint">Home</string>
    <string name="title_complaints">My complaints</string>
    <string name="choose_area_error_message">Choose District</string>
    <string name="municipalities">Districts</string>
    <string name="title_townships">Sub Districts</string>
    <string name="user_not_registered">This user not registered before!</string>
    <string name="website">Website</string>
    <string name="msg_brought_to_you">Brought to you by UNDP</string>
    <string name="title_gender">Gender:</string>
    <string name="title_male">Male</string>
    <string name="title_female">Female</string>
    <string name="choose_sub_category_error_message">Choose category of your complaint</string>
    <string name="err_no_camera">No camera found!</string>
    <string name="complaint_video">Complaint video</string>
    <string name="err_load_video">Error in record video</string>
    <string name="stop_recording_before_select_image_message">Stop recording before add photo</string>
    <string name="stop_recording_before_record_video_message">Stop audio recording before add video</string>
    <string name="err_relogin">Something error happened, please relogin</string>
    <string name="title_country">Country</string>
    <string name="title_govern">Governrate</string>
    <string name="err_citizen_name">Enter your name</string>
    <string name="err_email_empty">Enter Email Address</string>
    <string name="err_phone_empty">Enter your phone number</string>
    <string name="err_phone_wrong">Invalid phone number</string>
    <string name="err_birthdate_empty">Enter your birthdate</string>
    <string name="err_district_empty">Choose your district</string>
    <string name="err_sub_district_empty">Choose your sub dustrict</string>
    <string name="err_hay_empty">Choose your hay</string>
    <string name="err_govern_empty">Choose your governrate</string>
    <string name="title_sign_out">Sign out</string>
    <string name="msg_logout_success">Logout successfully</string>
    <string name="sure_logout">Are you want to logout?</string>
    <string name="err_user_not_registered">This user not registered before</string>
    <string name="phone_registered_before">This phone registered before</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="no_data_found">No data found</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="wrong_data">Wrong data</string>
    <string name="invalid_phone_email">Invalid phone number or email</string>
    <string name="complaint_comment">Comment</string>
    <string name="complaint_details_audio_error_message">Enter complaint description or record voice</string>
    <string name="err_out_of_karbala_area">You are outside the boundaries of the area of Karbala</string>
    <string name="err_country_empty">Choose your country</string>
    <string name="no_districts">No districts</string>
    <string name="title_districts">Districts</string>


</resources>
