<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="locale"
    tools:context=".ui.changelanguage.view.ChangeLanguageActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_shape_layout" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/english_language_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_13"
        android:layout_marginTop="@dimen/dimen_25"
        android:layout_marginEnd="@dimen/dimen_18"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:background="@drawable/round_solid_grey"
            android:orientation="vertical"
            android:paddingStart="@dimen/dimen_30"
            android:paddingTop="@dimen/dimen_20"
            android:paddingEnd="@dimen/dimen_20"
            android:paddingBottom="@dimen/dimen_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/item_township_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_township_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/msg_change_lang_to_english"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <RadioButton
            android:id="@+id/english_language_rb"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:background="@drawable/townships_selector"
            android:button="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/arabic_language_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_13"
        android:layout_marginTop="@dimen/dimen_25"
        android:layout_marginEnd="@dimen/dimen_18"
        android:layout_marginBottom="@dimen/dimen_20"
        app:layout_constraintTop_toBottomOf="@id/english_language_container">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:background="@drawable/round_solid_grey"
            android:orientation="vertical"
            android:paddingStart="@dimen/dimen_30"
            android:paddingTop="@dimen/dimen_20"
            android:paddingEnd="@dimen/dimen_20"
            android:paddingBottom="@dimen/dimen_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:paddingBottom="@dimen/dimen_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/msg_change_lang_to_arabic"
                android:textAlignment="viewStart" />
        </LinearLayout>

        <RadioButton
            android:id="@+id/arabic_language_rb"
            android:layout_width="@dimen/dimen_30"
            android:layout_height="@dimen/dimen_30"
            android:background="@drawable/townships_selector"
            android:button="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".3" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/change_language_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_33"
        android:layout_marginBottom="@dimen/dimen_13"
        android:background="@drawable/round_solid_blue"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_13"
        android:paddingBottom="@dimen/dimen_13"
        android:text="@string/change"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arabic_language_container"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintWidth_percent=".55" />

    <TextView
        android:id="@+id/txt_brought_to_you"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginBottom="@dimen/dimen_8"
        android:text="@string/msg_brought_to_you"
        android:textSize="@dimen/font_11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintLeft_toLeftOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>